# die-forward

./: .env.example  .gitignore  CLAUDE.md  DEMO_SCRIPT.md  HACKATHON_STATUS.md  README.md  instant.perms.ts  jest.config.js  next.config.ts  package-lock.json  package.json  quickref.md  tsconfig.json  vercel.json
.claude/: settings.local.json
anchor-program/: Anchor.toml  Cargo.toml  package.json
anchor-program/programs/die-forward/: Cargo.toml
anchor-program/programs/die-forward/src/: lib.rs
anchor-program/programs/run-record/: Cargo.toml
anchor-program/programs/run-record/src/: lib.rs
art/: ICON_PROMPTS.md  ITEM_PROMPTS.md  eternal-descent.html
content/: combat-actions.json  combat-rooms.json  corpse-rooms.json  death-epitaphs.json  exit-rooms.json  explore-rooms.json
docs/: ADMIN_SETTINGS.md  AUDIO.md  AUDIO_PROMPTS.md  AUDIUS_INTEGRATION.md  AUTH_PLAN.md  AUTH_SYSTEM.md  COMPONENTS.md  CONTENT_BIBLE.md  CONTENT_SYSTEM.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  FEEDBACK_PATTERNS.md  GAME_DESIGN.md  GAME_ENHANCEMENT_PLAN.md  GAME_EVAL_AND_BLOCKBUSTER_BRAINSTORM.md  IMAGE_PROMPTS.md  KNOWN_ISSUES.md  MAGICBLOCK.md  MOBILE_WALLET.md  MUSIC_SCORE.md  MVP_SCOPE.md  PLAYERS_HANDBOOK.md  REVY-CONTEXT.md  REVY-REVIEW-2026-03-13.md  ROADMAP.md  SFX-PLAN.md  STAKING_FLOWS.md  TAPESTRY.md  TECH_STACK.md  TEST-PLAN.md
graveyard-slides/: SUBMISSION.md  index.html  slide-03-game.html  slide-03b-features.html  slide-05-tapestry.html  slide-08-audius.html  slide-08-build.html  slide-09-close.html
integrations/: README.md
mobile/: .env.example  .gitignore  BUILD_NOTES.md  app.config.js  app.json  babel.config.js  eas.json  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  (+1 more)
(+474 files in other folders)
