[package]
name = "die-forward"
version = "0.1.0"
description = "Die Forward - On-chain escrow for social roguelite"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "die_forward"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
