[package]
name = "die-forward"
version = "0.1.0"
description = "Die Forward - On-chain escrow for social roguelite"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "die_forward"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
