[package]
name = "run-record"
version = "0.1.0"
description = "Die Forward — Run Record with MagicBlock Ephemeral Rollup delegation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "run_record"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor", "disable-realloc"] }
blake3 = "=1.7.0"  # pin to avoid edition2024 requirement in 1.8.x (incompatible with Solana BPF toolchain)
